feat: solved cors blocking